# vortex-config

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STATUS.md  clippy.toml  codecov.yml  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/vortex-core/: Cargo.toml
crates/vortex-core/src/: error.rs  lib.rs  types.rs
crates/vortex-core/src/config/: map.rs  mod.rs  source.rs  value.rs
crates/vortex-core/src/format/: json.rs  mod.rs  properties.rs  spring.rs  yaml.rs
crates/vortex-core/src/merge/: mod.rs  source_list.rs
crates/vortex-core/tests/: domain_tests.rs  merge_tests.rs  serialization_tests.rs
crates/vortex-core/tests/common/: mod.rs
crates/vortex-git/: Cargo.toml
crates/vortex-git/src/: backend.rs  error.rs  lib.rs
crates/vortex-git/src/reader/: format.rs  mod.rs  parser.rs  resolver.rs
crates/vortex-git/src/repository/: config.rs  git_ops.rs  mod.rs  refs.rs
crates/vortex-git/src/source/: mod.rs  query.rs  result.rs  traits.rs
crates/vortex-git/src/sync/: mod.rs  scheduler.rs  state.rs
crates/vortex-server/: Cargo.toml
crates/vortex-server/benches/: cache_bench.rs  serialization_bench.rs
crates/vortex-server/src/: error.rs  lib.rs  main.rs  server.rs  state.rs
crates/vortex-server/src/cache/: config_cache.rs  invalidation.rs  keys.rs  mod.rs
crates/vortex-server/src/extractors/: accept.rs  mod.rs  path.rs  query.rs
crates/vortex-server/src/handlers/: config.rs  health.rs  invalidate.rs  metrics.rs  mod.rs  response.rs
crates/vortex-server/src/metrics/: cache.rs  http.rs  mod.rs  setup.rs
crates/vortex-server/src/middleware/: logging.rs  mod.rs  request_id.rs
crates/vortex-server/src/response/: json.rs  mod.rs  properties.rs  yaml.rs
crates/vortex-server/tests/: config_label_test.rs  config_test.rs  content_test.rs  health_test.rs  middleware_test.rs
crates/vortex-server/tests/helpers/: assertions.rs  client.rs  mod.rs
crates/vortex-sources/: Cargo.toml
crates/vortex-sources/src/: lib.rs
deployment/: Dockerfile  docker-compose.yml
docs/: ADR-004-git-cli-implementation.md  PRD.md  vortex-config.postman_collection.json
docs/planning/00-overview/: index.md
docs/planning/01-foundation/: story-001-workspace-setup.md  story-002-toolchain-config.md  story-003-ci-pipeline.md  story-004-domain-model.md  story-005-error-handling.md
docs/planning/02-core-types/: index.md  story-001-configmap-serde.md  story-002-property-source.md  story-003-spring-format.md  story-004-format-conversion.md  story-005-core-testing.md
docs/planning/04-git-backend/: index.md
docs/planning/05-cache-config/: story-005-benchmarks.md
docs/planning/10-enterprise/: story-002-rollout-api.md  story-003-drift-detection.md  story-004-heartbeat-sdk.md  story-005-federation.md  story-006-production-ready.md
docs/reviews/: epic-01-review.md  epic-02-review.md
docs/wiki/: API-Reference.md  Architecture.md  Configuration.md  Deployment.md  Getting-Started.md  Home.md
