[package]
name = "vortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain types and traits for Vortex Config"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
indexmap = { version = "2.13.0", features = ["serde"] }
ordered-float = { version = "5.1.0", features = ["serde"] }

[dev-dependencies]