[package]
name = "vortex-git"
version = "1.0.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Git backend for Vortex Config - provides Git-based configuration source"

[dependencies]
# Workspace dependencies
vortex-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Types matching vortex-core
indexmap = "2.13.0"
ordered-float = "5.1"

# Async runtime
tokio = { version = "1.43", features = ["sync", "time", "rt", "macros"] }
async-trait = "0.1.89"

# Concurrency
parking_lot = "0.12.5"

# Configuration formats
serde_yaml = "0.9"
java-properties = "2.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tempfile = "3.24.0"
