[package]
name = "vortex-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id", "cors"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
serde_yaml = "0.9"


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"