[package]
name = "vortex-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vortex-server"
path = "src/main.rs"

[dependencies]
vortex-git = { path = "../vortex-git" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "request-id", "cors"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
serde_yaml = "0.9"


[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"