[package]
name = "vortex-server"
version = "1.0.2"
edition.workspace = true

[[bin]]
name = "vortex-server"
path = "src/main.rs"

[dependencies]
vortex-git = { path = "../vortex-git" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "request-id", "cors"] }
uuid = { version = "1.20.0", features = ["v7"] }
urlencoding = "2.1"
serde_yaml = "0.9"

# Cache
moka = { version = "0.12.12", features = ["future"] }
glob = "0.3.3"

# Configuration
config = "0.15.19"

# Metrics
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"
async-trait = "0.1"


[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
serde_yaml = "0.9"
criterion = { version = "0.8.1", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false