[package]
name = "vortex-sources"
version = "1.0.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sources types and traits for Vortex Config"

[dependencies]
vortex-core.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true